// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`connectors > mirroredModel > importers > ImageImporter > constructor > success 1`] = `
ImageImporter {
  "imageName": "imageName",
  "imageTag": "tag",
  "logData": undefined,
  "manifestBody": null,
  "metadata": {
    "distributionPackageName": "domain/imageName:tag",
    "importKind": "image",
    "mirroredModelId": "model1",
  },
  "user": {
    "dn": "user",
  },
}
`;

exports[`connectors > mirroredModel > importers > ImageImporter > processEntry > success extract manifest.json 1`] = `
ImageImporter {
  "imageName": "imageName",
  "imageTag": "tag",
  "logData": undefined,
  "manifestBody": {
    "manifest": true,
  },
  "metadata": {
    "distributionPackageName": "domain/imageName:tag",
    "importKind": "image",
    "mirroredModelId": "model1",
  },
  "user": {
    "dn": "user",
  },
}
`;

exports[`services > mirroredModel > importers > ImageImporter > constructor > success 1`] = `
ImageImporter {
  "imageName": "imageName",
  "imageTag": "tag",
  "logData": undefined,
  "manifestBody": null,
  "metadata": {
    "distributionPackageName": "domain/imageName:tag",
    "importKind": "image",
    "mirroredModelId": "model1",
  },
  "user": {
    "dn": "user",
  },
}
`;

exports[`services > mirroredModel > importers > ImageImporter > processEntry > success extract manifest.json 1`] = `
ImageImporter {
  "imageName": "imageName",
  "imageTag": "tag",
  "logData": undefined,
  "manifestBody": {
    "manifest": true,
  },
  "metadata": {
    "distributionPackageName": "domain/imageName:tag",
    "importKind": "image",
    "mirroredModelId": "model1",
  },
  "user": {
    "dn": "user",
  },
}
`;
